[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my-ptan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
  { name="Khoa", email="khoa@example.com" }
]
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["ptan"]